--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <a class="logo" href="index.html">
+        <img class="logo" src="#" alt="Логотип компании «Отдых в Седоне»">
+      </a>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link navigation-link-current" href="catalog.html">Гостинницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-user">
+          <li class="navigation-user-item">
+            <a class="navigation-link" href="#"><img class="icon" src="#" alt="Поиск">
+            </a>
+            </li>
+          <li class="navigation-user-item">
+            <a class="navigation-link" href="#"><img class="icon" src="#" alt="Избранное">
+            </a>
+          </li>
+          </ul>
+      </nav>
+      <button class="button" type="submit">Хочу сюда</button>
+    </header>
   </body>
 </html>
